--- a/Heart_Disease_Classification_(Hungarian_Dataset).ipynb
+++ b/Heart_Disease_Classification_(Hungarian_Dataset).ipynb
@@ -4362,7 +4362,7 @@
         }
       ],
       "source": [
-        "cm = confusion_matrix(y_test_normal, y_pred_knn)\n",
+        "cm = confusion_matrix(y_test_normal, y_pred_rf)\n",
         "\n",
         "plt.figure(figsize=(8, 6))\n",
         "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\")\n",
